# sonicmaths

./: AUTHORS  Doxyfile  Makefile  Makefile.am  README  TODO  config.def.mk  configure.ac  sonicmaths.pc.in
doc/: daisybell.c  daisybell.seq  example.seq  main.dxg
include/: sonicmaths.h
include/sonicmaths/: bandpass.h  bandpass2.h  bandstop2.h  buffer.h  clock.h  controller.h  cosine.h  delay.h  differentiator.h  distortion.h  dsf.h  envelope-generator.h  fdmodulator.h  filter.h  graph.h  highpass.h  highpass2.h  impulse-train.h  instrument.h  integrator.h  jbridge.h  jmidi.h  key.h  lag.h  limit.h  lowpass.h  lowpass2.h  math.h  midi.h  mixer.h  modulator.h  noise.h  notch.h  oscillator.h  parabola.h  parameter.h  portamento.h  predefs.h  quantize.h  random.h  (+11 more)
src/: bandpass.c  bandpass2.c  bandstop2.c  buffer.c  clock.c  controller.c  cosine.c  delay.c  differentiator.c  distortion.c  dsf.c  envelope-generator.c  fdmodulator.c  filter.c  graph.c  highpass.c  highpass2.c  impulse-train.c  instrument.c  integrator.c  jbridge.c  jmidi.c  key.c  lag.c  limit.c  lowpass.c  lowpass2.c  math.c  midi.c  mixer.c  modulator.c  mtrand.c  mtrand.h  noise.c  notch.c  oscillator.c  parabola.c  parameter.c  portamento.c  predefs.c  (+20 more)
